--- a/functions/MichaelScott/template.yml
+++ b/functions/MichaelScott/template.yml
@@ -3,7 +3,7 @@ Transform: AWS::Serverless-2016-10-31
 
 Description: A simple Hello World Serverless project
 Resources:
-  hello:
+  MichaelScott:
     Type: AWS::Serverless::Function
     Properties:
       Runtime: nodejs6.10
