--- a/www/package.json
+++ b/www/package.json
@@ -24,7 +24,6 @@
     "ember-cli-babel": "^6.6.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.2.1",
-    "ember-cli-google-analytics": "^1.5.0",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
@@ -36,6 +35,7 @@
     "ember-data": "~2.18.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-metrics": "^0.12.1",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.18.0",
     "ember-welcome-page": "^3.0.0",
