--- a/www/package.json
+++ b/www/package.json
@@ -28,6 +28,7 @@
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-meta-tags": "^4.0.0",
     "ember-cli-qunit": "^4.1.1",
     "ember-cli-sass": "^7.1.4",
     "ember-cli-shims": "^1.2.0",
@@ -37,6 +38,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-metrics": "^0.12.1",
+    "ember-page-title": "^4.0.3",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.18.0",
     "ember-welcome-page": "^3.0.0",
