--- a/www/package.json
+++ b/www/package.json
@@ -25,6 +25,7 @@
     "ember-cli-concat": "^1.3.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.2.1",
+    "ember-cli-fastboot": "^1.1.3",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
@@ -36,6 +37,7 @@
     "ember-cli-uglify": "^2.0.0",
     "ember-data": "~2.18.0",
     "ember-export-application-global": "^2.0.0",
+    "ember-fetch": "^3.4.4",
     "ember-load-initializers": "^1.0.0",
     "ember-metrics": "^0.12.1",
     "ember-page-title": "^4.0.3",
