--- a/www/package.json
+++ b/www/package.json
@@ -42,6 +42,9 @@
     "ember-metrics": "^0.12.1",
     "ember-page-title": "^4.0.3",
     "ember-resolver": "^4.0.0",
+    "ember-service-worker": "^0.6.9",
+    "ember-service-worker-asset-cache": "^0.6.2",
+    "ember-service-worker-cache-fallback": "^0.6.1",
     "ember-source": "~2.18.0",
     "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
