--- a/www/package.json
+++ b/www/package.json
@@ -34,8 +34,9 @@
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
-    "ember-data": "~2.18.0",
+    "ember-data": "^3.0.0-beta.1",
     "ember-export-application-global": "^2.0.0",
+    "ember-fastboot-form-rehydration": "^0.1.3",
     "ember-fetch": "^3.4.4",
     "ember-load-initializers": "^1.0.0",
     "ember-metrics": "^0.12.1",
@@ -44,7 +45,7 @@
     "ember-service-worker": "^0.6.9",
     "ember-service-worker-asset-cache": "^0.6.2",
     "ember-service-worker-cache-fallback": "^0.6.1",
-    "ember-source": "~2.18.0",
+    "ember-source": "^3.0.0",
     "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
     "loader.js": "^4.2.3",
