--- a/www/package.json
+++ b/www/package.json
@@ -56,6 +56,9 @@
   },
   "dependencies": {
     "fastboot-app-server": "^1.1.0",
-    "fuse.js": "^3.2.0"
+    "fuse.js": "^3.2.0",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.33.4"
   }
 }
